--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.20",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
@@ -27,8 +28,10 @@
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.5.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
